# Reconstruction-Evaluation

./: .gitignore  CMakeLists.txt  README.md  main_a.cpp  main_b.cpp  main_batch_eval.cpp  main_batch_quality.cpp  main_c.cpp  main_find_tolerance.cpp  main_parse_camera_stats.cpp  main_pca.cpp  main_single_eval.cpp  main_single_quality.cpp  sandbox.cpp
libraries/: CMakeLists.txt
libraries/imguizmo/: CMakeLists.txt
matlab/: evaluation_stats_compare.m  missing_intervals.m  render_stats.m  tolerance_compare.m  tolerance_pca.m  visualize_accuracy.m  visualize_buffer.m  visualize_correlation.m  visualize_quality_batch.m  visualize_quality_single.m
matlab/bak/: evaluation_distance.m  evaluation_stats.m  evaluation_stats_compare.m  visualize_acc_vs_gsd.m  visualize_acc_vs_ppa.m  visualize_acc_vs_quality.m  visualize_accuracy.m  visualize_ppa.m
src/eval/: EvaluationStats.cpp  EvaluationStats.h  Helpers.cpp  Helpers.h  IPCameraStats.cpp  IPCameraStats.h  Mesh.cpp  Mesh.h  Pca.h  PointCloud.cpp  PointCloud.h
